# neotec_van_pos_v2

./: .gitignore  API_V2_SPEC.md  MANIFEST.in  README.md  UPGRADE_NOTES.md  package.json  pyproject.toml  setup.py
neotec_van_pos/: __init__.py  api.py  hooks.py  install.py  modules.txt  utils.py
neotec_van_pos/api/: __init__.py  ui_settings.py
neotec_van_pos/api/v2/: auth.py  catalog.py  customer.py  shift.py  sync.py
neotec_van_pos/config/: desktop.py
neotec_van_pos/neotec_van_pos/doctype/neotec_pos_device/: neotec_pos_device.json  neotec_pos_device.py
neotec_van_pos/neotec_van_pos/doctype/neotec_pos_settings/: neotec_pos_settings.json  neotec_pos_settings.py
neotec_van_pos/neotec_van_pos/doctype/neotec_pos_shift/: neotec_pos_shift.json  neotec_pos_shift.py
neotec_van_pos/neotec_van_pos/doctype/neotec_pos_sync_log/: neotec_pos_sync_log.json  neotec_pos_sync_log.py
neotec_van_pos/neotec_van_pos/doctype/neotec_pos_sync_session/: neotec_pos_sync_session.json  neotec_pos_sync_session.py
neotec_van_pos/neotec_van_pos/doctype/neotec_pos_ui_settings/: neotec_pos_ui_settings.json  neotec_pos_ui_settings.py
neotec_van_pos/neotec_van_pos/page/neotec_pos_terminal/: neotec_pos_terminal.js  neotec_pos_terminal.json  neotec_pos_terminal.py
neotec_van_pos/public/js/: neotec_pos_terminal.bundle.js
neotec_van_pos/public/js/src/: neotec_pos_terminal.jsx
