[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "neotec_van_pos"
version = "2.0.0"
description = "Neotec VAN POS v2 for Frappe/ERPNext"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["neotec_van_pos*"]

[tool.bench.frappe-dependencies]
frappe = ">=15,<16"
erpnext = ">=15,<16"
