[project]
name = "neotec_van_pos"
authors = [
  { name = "Neotec", email = "support@neotec.local" }
]
description = "Neotec VAN POS v2 for Frappe/ERPNext"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.frappe-dependencies]
frappe = ">=15.0.0,<16.0.0"
erpnext = ">=15.0.0,<16.0.0"
